@@ -163,6 +163,7 @@ enum VAR_TYPES {
 	KICK_ON_NICKFLOOD_VAR ,
 	KICK_ON_PUBFLOOD_VAR ,
 	KICK_OPS_VAR ,
+	LAG_CHECK_INTERVAL_VAR,
 	LAMEIDENT_VAR,
 	LAMELIST_VAR,
 	LASTLOG_VAR ,
