@@ -266,6 +266,7 @@ static	IrcVariable irc_variable[] =
 	{ "KICK_ON_NICKFLOOD",0,	INT_TYPE_VAR,   DEFAULT_KICK_ON_NICKFLOOD, NULL, NULL, 0, VIF_BITCHX  },
 	{ "KICK_ON_PUBFLOOD",0,		INT_TYPE_VAR,   DEFAULT_KICK_ON_PUBFLOOD, NULL, NULL, 0, VIF_BITCHX  },
 	{ "KICK_OPS",0,			BOOL_TYPE_VAR,	DEFAULT_KICK_OPS, NULL, NULL, 0, VIF_BITCHX  },
+	{ "LAG_CHECK_INTERVAL",0,	INT_TYPE_VAR,	DEFAULT_LAG_CHECK_INTERVAL, NULL, NULL, 0, VIF_BITCHX },
 	{ "LAMEIDENT",0,		BOOL_TYPE_VAR,	DEFAULT_LAME_IDENT, NULL, NULL, 0, VIF_BITCHX },
 	{ "LAMELIST",0,			BOOL_TYPE_VAR,	DEFAULT_LAMELIST, NULL, NULL, 0, VIF_BITCHX },
 	{ "LASTLOG",0,			INT_TYPE_VAR,	DEFAULT_LASTLOG, NULL, set_lastlog_size, 0, 0 },
